frontend/scss/molecules/_m-listing.scss
/* ... */
// variant `m-listing` inside `.o-pinboard`
.o-pinboard__item.m-listing--variable-height .m-listing__img {
  max-height: 500px; // formally 4/3 ratio max: percentage(4 / 3)
  overflow: hidden;
}

.o-pinboard__item.m-listing--variable-height .m-listing__img.m-listing__img--w-overflow {
  overflow: visible;
}

.o-pinboard__item.m-listing--variable-height .m-listing__img img,
.o-pinboard__item.m-listing--variable-height .m-listing__img .default-img {
  @include objectFitFix;
  display: block;
  position: static;
  height: auto;
  object-fit: contain;
  object-position: center top;
}

.o-pinboard__item.m-listing--variable-height .m-listing__img::before,
.o-pinboard__item.m-listing--variable-height .m-listing__img::after {
  content: '';
  display: none;
}

.o-pinboard__item .m-listing__meta {
  min-height: 0;
}


// variant `m-listing` thats also a `.o-feature-plus-4__feature`

.o-feature-plus-4__feature .m-listing__meta {
  text-align: center;
}

.o-feature-plus-4__feature .m-listing__meta .f-tag {
  @include tucked-margin-top($f-tag, ('xsmall': 44, 'small+': 52, 'medium+': 60));
}

.o-feature-plus-4__feature .f-headline-editorial {
  @include tucked-margin-top($f-headline-editorial, ('xsmall': 40, 'small+': 60, 'medium+': 52, 'large': 60));
}

.o-feature-plus-4__feature .m-listing__meta .f-body-editorial {
  @include tucked-margin-top($f-body-editorial, ('xsmall': 44, 'small+': 52, 'medium+': 56));
}

// variant `m-listing` that expects the image to be on the left, not the right, and optionally absent
.m-listing--rtl .m-listing__link {
  flex-flow: row-reverse wrap;
}

.m-listing--rtl .m-listing__title {
  flex-basis: 100%;
  margin-bottom: 16px;
}

.m-listing--rtl .m-listing__meta {
  width: 100%;
  margin-right: 0;
}

// remove tucked-margin-top
.m-listing--inline.m-listing--rtl .m-listing__meta .f-secondary {
  margin-top: 0;

  &:before, &:after {
    content: none;
  }
}

.m-listing--rtl .m-listing__img {
  margin-right: colspan(0.5);

  margin-top: 0;

  @include breakpoint('medium+') {
    @include tucked-margin-top($f-secondary, ('xsmall': 36));
  }
}

@include breakpoint('small') {

  .m-listing--rtl .m-listing__img {
    order: 1;
    flex-basis: 100%;
    margin-top: 0;
    margin-right: 0;
  }

  .m-listing--rtl .m-listing__title {
    order: 2;
    margin-top: 10px;
  }

  .m-listing--rtl .m-listing__meta {
    order: 3;
    flex-basis: 100%;
  }
}


// variant `m-listing` for selections
.m-listing--selection .m-listing__img .m-listing__img__overlay {
    position: absolute;
    top: 0;

    z-index: 2;
    padding: 32px;
    width: 100%;
    height: 33%;

    text-align: right;

    background: linear-gradient(
      to bottom,
      $color__black--85,
      transparent
    );
}

